[package]
name = "screen_embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
defmt = ["dep:defmt", "embedded-hal-async/defmt-03"]

[dependencies]
defmt = {version = "0.3.8", optional = true}
embedded-hal-async = "1.0.0"
once_cell = "1.20.2"
